style.css
body {
  background-color: #e5e5e5;
  margin: 0;
  font-family: Poppins, sans-serif;
}

header {
  display: flex;
  flex-direction: column;
  background-color: #fff;
  border-radius: 0 0 0 100px;
  margin-bottom: 100px;
}

.top-bar {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.logo {
  font-weight: 700;
  text-align: center;
  margin: 10px 0 10px 12px;
  color: #6070ff;
}

nav {
  margin: 0 10px 0 0;
}

.header-menu-items {
  margin-left: auto;
  display: none;
  gap: 32px;
  font-weight: 500;
  font-size: 15px;
  color: #344563;
}

a {
  text-decoration: none;
}

.hamburger {
  width: 35px;
  height: 4px;
  background-color: #6070ff;
  margin: 6px 0;
}

.hero {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  margin: 24px;
  height: 600px;
  background: 
    url("images/Ellipse12.svg") 5% 95% no-repeat,
    url("images/Ellipse11.svg") 100% 90% / 10% no-repeat,
    url("images/Ellipse14.svg") 15% 30% no-repeat,
    url("images/Ellipse8.svg") 25% 40% no-repeat,
    url("images/Ellipse7.svg") 35% 95% no-repeat,
    url("images/Ellipse6.svg") 45% 85% no-repeat,
    url("images/Ellipse5.svg") 55% 75% no-repeat,
    url("images/Ellipse4.svg") 65% 65% no-repeat,
    url("images/Rectangle6.svg") 75% 55% no-repeat,
    url("images/Rectangle7.svg") 85% 45% no-repeat,
    url("images/Rectangle5.svg") 95% 35% no-repeat,
    url("images/Rectangle4.svg") 40% 5% no-repeat,
    url("images/Ellipse13.svg") 70% 25% no-repeat,
    url("images/Ellipse3.svg") 0% 0% / 10% no-repeat,
    url("images/Ellipse11.svg") 100% 20% no-repeat;
}

.hero-heading {
  font-weight: 700;
  font-size: 40px;
  color: #172b4d;
}

.hero-text {
  background-color: #fff;
  color: #344563;
}

.connect-text {
  font-weight: 500;
  color: #7f8cff;
}

ul {
  margin: 0;
  padding: 0;
  display: flex;
  list-style-type: none;
  align-items: center;
}

li {
  margin: 2px 10px 2px 0;
}

.social-image {
  width: 25px;
  height: 25px;
  text-align: center;
  margin: 0.5em;
}

.portfolio-grid {
  display: grid;
  grid-template-rows: 1fr 1fr 1fr 1fr;
  gap: 88px;
}

.portfolio-flex {
  display: flex;
  flex-direction: column;
  background-color: #fff;
  margin: 0 24px;
}

.portfolio-flex > * {
  margin: 16px;
  width: 95%;
}

.portfolio-right {
  display: flex;
  flex-direction: column;
}

.portfolio-right > * {
  margin: 16px 0;
}

.portfolio-img {
  align-self: center;
  margin: 10px;
}

.portfolio-heading {
  font-size: 32px;
  font-weight: 700;
  color: #172b4d;
}

.portfolio-list-first {
  font-weight: 600;
  font-size: 13px;
  color: #344563;
}

.portfolio-list-dot {
  height: 8px;
  width: 8px;
  background-color: #c1c7d0;
  border-radius: 50%;
}

.portfolio-list-secondary {
  color: #7a869a;
  font-size: 13px;
}

.portfolio-text {
  color: #344563;
  font-size: 15px;
}

.language-text {
  border-radius: 8px;
  background-color: #ebebff;
  padding: 4px 12px;
  color: #6070ff;
}

button {
  background-color: #fff;
  border-color: #396df2;
  color: #396df2;
  padding: 12px;
  font-weight: 500;
  font-size: 17px;
  width: 130px;
  height: 50px;
  border-radius: 16px;
  border-width: 1px;
}

button:hover {
  background-color: #6070ff;
  color: #fff;
}

button:visited {
  background-color: #2230d2;
  color: #fff;
}

button:disabled {
  color: #5e6c84;
  background-color: white;
}

button:link {
  color: #6070ff;
  background-color: white;
}

.about {
  display: flex;
  flex-direction: column;
  background-color: #fff;
  margin-top: 88px;
  border-radius: 0 70px 0 0;
}

.about > * {
  margin: 10px 24px;
}

.about-heading {
  margin-top: 114px;
  color: #172b4d;
  font-weight: bold;
  font-size: 40px;
}

.about-text {
  color: #344563;
}

.about-button {
  width: 160px;
}

.skills-list {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin: 24px 36px;
}

.languages-list {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 12px;
}

.skills-list-item {
  width: 100%;
  font-weight: 500;
  font-size: 20px;
  margin: 24px 0;
}

.languages-list-item {
  background-color: #f7f7f9;
  width: 80%;
  height: 66.72px;
  display: flex;
  align-items: center;
  color: #253858;
  font-weight: 500;
  font-size: 15px;
}

.languages-list-item-img {
  flex: 0 0 auto;
  width: 48px;
  height: 48px;
  margin: 12px;
}

.languages-list-item-text {
  text-align: center;
}

hr {
  width: 100%;
  height: 1px;
  background-color: #dfe1e6;
  border: none;
}

.skills-list-arrow-right {
  float: right;
  margin-right: 40px;
}

.skills-list-arrow-down {
  float: right;
  margin-right: 40px;
  transform: rotate(90deg);
}

footer {
  background-color: #fff;
}

.footer-background {
  border-radius: 70px 0 0 0;
  padding-bottom: 45px;
  background:
    url("images/Ellipse14.svg") 100% 0% no-repeat,
    url("images/Ellipse8.svg") 50% 0% no-repeat,
    url("images/Ellipse7.svg") 0% 90% no-repeat,
    url("images/Ellipse6.svg") 80% 5% no-repeat,
    url("images/Ellipse5.svg") 0% 100% no-repeat,
    url("images/Rectangle6.svg") 60% 0% no-repeat,
    url("images/Rectangle5.svg") 0% 0% no-repeat,
    url("images/Rectangle4.svg") 100% 100% no-repeat,
    url("images/Ellipse13.svg") 0% 0% no-repeat;
  background-color: #6070ff;
}

.footer-header {
  margin: 0 24px;
  text-align: center;
  font-weight: bold;
  font-size: 40px;
  color: #fff;
  padding-top: 103px;
}

.footer-text {
  margin: 12px 24px;
  text-align: center;
  color: #fff;
  font-size: 20px;
}

form {
  margin: 30px 24px 0 24px;
  display: flex;
  flex-direction: column;
  gap: 18px;
}

input {
  border-radius: 8px;
  border: 1px solid #cfd8dc;
  height: 48px;
}

textarea {
  border-radius: 8px;
  border: 1px solid #cfd8dc;
  height: 170px;
  padding: 15px;
}

#submit-button {
  width: 140px;
  padding: 12px 16px;
  color: #6070ff;
  font-weight: 500;
  font-size: 17px;
  background-color: #fff;
}

@media screen and (min-width: 820px) {
  .top-bar {
    margin: 25px 155px;
  }

  .header-menu-items {
    display: flex;
  }

  .hamburger {
    display: none;
  }

  .hero {
    margin: 0 260px;
  }

  .hero-heading {
    font-size: 48px;
  }

  .hero-text {
    font-size: 20px;
  }

  .portfolio-flex {
    flex-direction: row;
    justify-content: center;
    margin: 142px;
    align-items: center;
    justify-content: space-around;
    padding: 0;
  }

  .portfolio-flex > * {
    width: 47%;
    padding: 14px;
  }

  .portfolio-right {
    height: 90%;
    justify-content: flex-start;
  }

  .about {
    flex-direction: row;
    padding: 0 142px;
    gap: 37px;
  }

  .about-left {
    width: 40%;
    margin: 142px 0;
    gap: 12px;
  }

  .about-heading {
    margin-top: 0;
  }

  .about-button {
    margin-top: 20px;
  }

  .skills-list {
    width: 60%;
    margin: 142px 0;
  }

  .skills-list-item {
    width: 100%;
  }

  .languages-list {
    flex-direction: row;
  }

  .languages-list-item {
    display: flex;
    flex-direction: column;
    width: 122px;
    height: 120px;
  }

  .footer-header {
    padding-top: 142px;
  }

  .footer-text {
    margin: 30px 30%;
  }

  form {
    margin: 12px 35%;
  }

  form > * {
    border-radius: 0;
  }

  #submit-button {
    align-self: center;
    border-radius: 8px;
    margin-bottom: 80px;
  }
}

